--- a/assets/style.css
+++ b/assets/style.css
@@ -71,8 +71,8 @@ input[type="range"] {
   justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
-  padding: 10px;
-  margin: 5px 10px;
+  padding: 0 10px;
+  /* margin: 5px 10px; */
   /* border: 1px solid red; */
 }
 
@@ -89,10 +89,25 @@ input[type="range"] {
   height: 100%;
   padding: 10px;
   margin: 5px 10px;
+  display: flex;
+  flex-direction: column;
   background-color: #262626;
   border: 6px solid #333;
   border-radius: 10px;
   color: #00ff91;
+  /* border: 1px solid red; */
+}
+
+.tuner-container {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  padding: 0px 10px;
+  border: 1px solid #333;
+  border-radius: 3px;
   /* border: 1px solid red; */
 }
 
